// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingCancel Button Renders the component 1`] = `
<fragment-stub><button type="button" class="v-btn v-btn--outlined theme--light v-size--default red--text text--darken-1" data-test="cancel-btn"><span class="v-btn__content">
    Cancel
  </span></button>
  <div role="dialog" class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`BillingCancel Dialog Renders the component 1`] = `
<fragment-stub><button type="button" class="v-btn v-btn--outlined theme--light v-size--default red--text text--darken-1" data-test="cancel-btn"><span class="v-btn__content">
    Cancel
  </span></button>
  <div role="dialog" class="v-dialog__container"></div>
</fragment-stub>
`;
